--- a/计算机网络原理.md
+++ b/计算机网络原理.md
@@ -1,7 +1,19 @@
-## 计算机网络原理
+# 计算机网络原理
 | 题型 | 题目数量 | 分值
 | ---- | ---- | ----
 | 单选题 | 25 | 25分|
 | 填空题 | 10 | 10分|
 | 简答题 | 6 | 30分|
 | 综合题 | 3 | 10分、12分、13分 |
+
+## 得分点：单选题和综合题
+
+## 第一章 计算机网络概述
+
+## 第二章 网络应用
+## 第三章 传输层
+## 第四章 网络层
+## 第五章 数据链路层与局域网
+## 第六章 物理层
+## 第七章 无线与移动网络
+## 第八章 网络安全基础
