--- a/计算机网络原理.md
+++ b/计算机网络原理.md
@@ -1,4 +1,4 @@
-# 计算机网络原理
+# 计算机网络原理第一节课
 | 题型 | 题目数量 | 分值
 | ---- | ---- | ----
 | 单选题 | 25 | 25分|
@@ -9,17 +9,8 @@
 ## 得分点：单选题和综合题
 
 ## 第一章 计算机网络概述
-### 第一节 计算机网络基本概念
-    一、计算机网络的定义
-### 第二节 计算机网络基本概念
-### 第三节 计算机网络基本概念
-### 第四节 计算机网络基本概念
-### 第五节 计算机网络基本概念
-### 第六节 计算机网络基本概念
-## 第二章 网络应用
-## 第三章 传输层
-## 第四章 网络层
-## 第五章 数据链路层与局域网
-## 第六章 物理层
-## 第七章 无线与移动网络
-## 第八章 网络安全基础
+    第一节 计算机网络基本概念
+        一、计算机网络的定义
+        计算机网络是互连的、自治的计算机的集合
+        1、互连：利用通信链路链接相互独立的计算机系统。
+        2、自治：互连的计算机系统彼此独立，不存在主从或者控制与被控制的关系。
