--- a/计算机网络原理.md
+++ b/计算机网络原理.md
@@ -9,8 +9,14 @@
 ## 得分点：单选题和综合题
 
 > 第一章 计算机网络概述
->> 第一节 计算机网络基本概念<br/>
-    一、计算机网络的定义<br/>
-    计算机网络是互连的、自治的计算机的集合<br/>
-    1、互连：利用通信链路链接相互独立的计算机系统。<br/>
+>> 第一节 计算机网络基本概念
+
+    一、计算机网络的定义
+    
+    计算机网络是互连的、自治的计算机的集合
+    
+    1、互连：利用通信链路链接相互独立的计算机系统。
+    
     2、自治：互连的计算机系统彼此独立，不存在主从或者控制与被控制的关系。
+
+>> 第二节 
