--- a/计算机网络原理第一节课.md
+++ b/计算机网络原理第一节课.md
@@ -13,10 +13,24 @@
 
     一、计算机网络的定义
     
-    计算机网络是互连的、自治的计算机的集合
-    
-    1、互连：利用通信链路链接相互独立的计算机系统。
-    
-    2、自治：互连的计算机系统彼此独立，不存在主从或者控制与被控制的关系。
+        计算机网络是互连的、自治的计算机的集合
+        
+            1、互连：利用通信链路链接相互独立的计算机系统。
+            
+            2、自治：互连的计算机系统彼此独立，不存在主从或者控制与被控制的关系。
+        
+        计算机网络的起源
 
->> 第二节 
+            从技术范畴来看，计算机网络是计算机技术和通信技术相互融合的产物。
+
+        ISP 因特网服务提供商 Internet Service Provider
+
+    二、协议的定义
+
+        网络协议 ## 网络通信实体## 之间在
+
+    三、计算机网络的功能
+
+    四、计算机网络的分类
+
+>> 第二节 计算机网络结构
