--- a/计算机网络原理第一章.md
+++ b/计算机网络原理第一章.md
@@ -54,4 +54,24 @@
 
     四、计算机网络的分类
 
+        按覆盖范围分类
+
+            个域网 (PAN) personal area network
+
+                覆盖范围 1-10m。 个人设备通过无线通信技术构成小范围的网络
+
+            局域网 (LAN) local area network
+
+                覆盖范围 10m-1km。办公楼、校园、厂区等局部区域内
+
+            城域网 (MAN) metropolitan area network
+
+                覆盖范围 5-50km。覆盖一个城市范围的网络
+
+            广域网 (WAN) wide area network
+
+                覆盖范围在几十到几千千米，可以实现异地城域网或局域网的互连
+
+        按照拓扑结构分类
+
 >> 第二节 计算机网络结构
