--- a/计算机网络原理第一章.md
+++ b/计算机网络原理第一章.md
@@ -74,4 +74,12 @@
 
         按照拓扑结构分类
 
+            拓扑：只考虑物体之间的位置关系而不考虑他们的形状和大小
+
+            星形拓扑结构
+
+            总线型拓扑结构
+
+            
+
 >> 第二节 计算机网络结构
