--- a/计算机网络原理第一章.md
+++ b/计算机网络原理第一章.md
@@ -76,10 +76,28 @@
 
             拓扑：只考虑物体之间的位置关系而不考虑他们的形状和大小
 
-            星形拓扑结构
+            星形拓扑结构：一个中央节点，网络中的主机通过点对点通信链路和中央节点连接。个域网，局域网
 
-            总线型拓扑结构
+                优点：易于监控管理，故障诊断、隔离
 
-            
+                缺点：中央节点一旦故障，全网瘫痪
+
+            总线型拓扑结构：采用一条广播信道作为公共传输介质。所有的节点均通过总线连接，节点间的通信均通过共享的总线进行。早期局域网
+
+                优点：结构简单，电缆数量少，易于扩展
+
+                缺点：通信范围受限、容易产生冲突
+
+            环形拓扑结构：利用通信链路将所有的节点连接成一个闭合的环。早期局域网、城域网
+
+                优点：
+
+                缺点：
+
+            网状拓扑结构
+
+            树形拓扑结构
+
+            混合拓扑结构
 
 >> 第二节 计算机网络结构
