--- a/计算机网络原理第一章.md
+++ b/计算机网络原理第一章.md
@@ -54,7 +54,7 @@
 
     四、计算机网络的分类
 
-        按覆盖范围分类
+        （一）按覆盖范围分类
 
             个域网 (PAN) personal area network
 
@@ -72,7 +72,7 @@
 
                 覆盖范围在几十到几千千米，可以实现异地城域网或局域网的互连
 
-        按照拓扑结构分类
+        （二）按照拓扑结构分类
 
             拓扑：只考虑物体之间的位置关系而不考虑他们的形状和大小
 
@@ -90,14 +90,84 @@
 
             环形拓扑结构：利用通信链路将所有的节点连接成一个闭合的环。早期局域网、城域网
 
-                优点：
+                优点：电缆长度短，易于避免冲突
 
-                缺点：
+                缺点：某节点故障引起全网瘫痪，加新（撤出）节点麻烦
 
-            网状拓扑结构
+            网状拓扑结构：网络中的结点通过多条链路与不同的结点直接相连接。广域网、核心网络 （最重要）
 
-            树形拓扑结构
+                优点：网络可靠性高，一条或多条链路故障时，网络仍然可以联通
 
-            混合拓扑结构
+                缺点：网络结构复杂、成本高
+
+            树形拓扑结构：可以看做是总线型拓扑或星形拓扑结构网络的扩展。局域网
+
+                优点：易于扩展，故障易隔离
+
+                缺点：根节点要求高
+
+            混合拓扑结构：有两种以上简单拓扑结构网络混合连接而成的网络。绝大多数实际网络
+
+                优点：易于扩展，可以构建不同规模的网络，根据需要优选网络结构
+
+                缺点：结构复杂，管理与维护复杂
+        
+        （三）按交换方式分类
+
+            1. 电路交换网络
+
+            2. 报文交换网络
+
+            3. 分组交换网络
+        
+        （四）按照网络用户的属性
+
+            1. 公用网络：面向公众开放的网络。例如电信网络
+
+            2. 私有网：某个组织（政府或者企业）出资建设专门面向该组织，不向公众开放。例如军事专用网络
 
 >> 第二节 计算机网络结构
+
+    一、网络边缘
+
+        连接到网络上的主机或者端系统。主机或者端系统：计算机、服务器、智能售价、智能传感器、智能家电等
+
+    二、接入网络： 实现网络边缘的端系统与网络核心连接的网络
+
+        1. 电话拨号接入： 利用电话网路接入
+
+        2. 非对称数字用户线路 ADSL
+
+            ① 利用电话网络接入
+
+            ② 基于频分多路复用技术
+
+            ③ 非对称 (下行与上行不对称，上行比较小，下行比较大）
+
+            ④ 独享式接入
+
+        3. 混合光纤同轴电缆 HFC 接入网络
+
+            ① 利用有线电视网络接入的技术
+
+            ② 基于频分多路复用技术
+
+            ③ 非对称
+
+            ④ 共享式接入
+
+        4. 局域网：典型的局域网技术是以太网、Wifi等
+
+        5. 移动接入网络：利用移动通信网络，如3G、4G、5G
+
+    三、网络核心
+
+        由通信链路互连的分组交换设备构成的网络，作用是实现网络边缘中主机之间的数据的中继和转发
+
+>> 第三节 数据交换技术
+
+>> 第四节 计算机网络性能
+
+>> 第五节 计算机网络体系结构
+
+>> 第六节 计算机网络与因特网发展简史
