--- a/计算机网络原理第一章.md
+++ b/计算机网络原理第一章.md
@@ -166,7 +166,36 @@
 
 >> 第三节 数据交换技术
 
->> 第四节 计算机网络性能
+    一、概念
+
+        数据交换：实现在大规模网络核心上进行数据传输的技术基础
+
+        交换设备：多通信端口，可以同时连接多个通信结点，进行通信的设备
+
+    一、分类
+
+        （一）电路交换
+        
+            1. 电路：通过中间交换结点为两台主机之间建立一条专用的通信线路
+
+            2. 电路交换：建立电路，利用电路通信，通信结束后拆除电路。最早出现的一种交换方式。电话网络是最早的、最大的电路交换网络
+
+            3. 电路交换的步骤：建立电路 传输数据 拆除电路
+
+            4. 电路交换的优缺点
+
+                优点：实时性高，时延和时延抖动小
+
+                缺点：不适用于突发数据传输，信道利用率低，传输速率单一
+
+            5. 适用于语音和视频类实时性强的业务
+
+        （二） 报文交换
+
+        （三） 分组交换
+
+
+>> 第四节 计算机网络性能 （综合题目）
 
 >> 第五节 计算机网络体系结构
 
