--- a/计算机网络原理第一章.md
+++ b/计算机网络原理第一章.md
@@ -192,6 +192,12 @@
 
         （二） 报文交换
 
+            1. 报文：发送方要把发送的信息附加上接收主机的地址和控制信息
+
+                发送方组装好报文，发送给相邻报文交换机。相邻报文交换机收到报文后检查无误，暂时存储报文，然后找出需要转发的下一个节点的地址，然后把报文给下一个节点的报文交换机
+
+                存储-转发的交换方式
+
         （三） 分组交换
 
 
